--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,6 +20,12 @@ header{
     position: relative;
 }
 
+.navbar {
+    background: rgba(10, 10, 10, 0.5); /* Fundo semitransparente */
+    backdrop-filter: blur(10px); /* O efeito de desfoque */
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+
 .navbar .nav-link {
     color: white !important; /* Define o texto em branco */
     font-size: 18px; 
